--- a/index.html
+++ b/index.html
@@ -57,7 +57,31 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects"></section>
+    <section id="projects">
+        <div class="projContainer">
+            <div class="projInfo">
+                <p class="projTitle serifFont">My Personal Portfolio Website</p>
+                <p class="projDetail sansFont">I have carefully designed this website to serve as my online portfolio.  I have demonstrated my raw HTML, CSS, and JS skills here.</p>
+            </div>
+            <img class="projSS" src="./assets/project-image/personal-website.png" alt="personal-website-screen-shot">
+        </div>
+
+        <div class="projContainer">
+            <img class="projSS" src="./assets/project-image/balanceTracker.png" alt="personal-website-screen-shot">
+            <div class="projInfo">
+                <p class="projTitle serifFont">Balance Tracker</p>
+                <p class="projDetail sansFont">With a combination of modern design and tech stack Balance tracker provides eligant solutions for tracking income & expense. I have demonstrated my raw HTML, CSS, Bootstrap, JS, PHP, and MySql skills here.</p>
+            </div>
+        </div>
+
+        <div class="projContainer">
+            <div class="projInfo">
+                <p class="projTitle serifFont">Moto Hub - ecommerce site for vehicles</p>
+                <p class="projDetail sansFont">A ecommerce that has always been missing in the ever growing market of Bangladesh.  I have demonstrated my raw HTML, CSS, JS, PHP, and MySQL skills here.</p>
+            </div>
+            <img class="projSS" src="./assets/project-image/moto-hub.png" alt="personal-website-screen-shot">
+        </div>
+    </section>
 
     <!-- About -->
     <section id="about"></section>
