--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
                 <a class="navLink sansFont" href="#contact">Contact</a>
             </div>
             <div id="contextMenuSwitch" onclick="contexMenuSwitchPressed()">
-                <img id="bar-icon" src="https://d33wubrfki0l68.cloudfront.net/79e75114856ae61628d2ad26504e3ff4ab2c71b6/f06a4/assets/svg/ham-menu.svg">
-                <img id="cross-icon" src="https://d33wubrfki0l68.cloudfront.net/de2a681c8ca1630b29949b3a34bf158a686a0554/6a0ec/assets/svg/ham-menu-close.svg" style="display: none;">
+                <img id="bar-icon"
+                    src="https://d33wubrfki0l68.cloudfront.net/79e75114856ae61628d2ad26504e3ff4ab2c71b6/f06a4/assets/svg/ham-menu.svg">
+                <img id="cross-icon"
+                    src="https://d33wubrfki0l68.cloudfront.net/de2a681c8ca1630b29949b3a34bf158a686a0554/6a0ec/assets/svg/ham-menu-close.svg"
+                    style="display: none;">
             </div>
         </div>
-    
+
         <div id="navMobile">
             <div id="rightNavItemGroupMobile">
                 <a class="navLink linkBox sansFont" href="#home">Home</a>
@@ -60,8 +63,9 @@
     <section id="projects">
         <div class="projContainer">
             <div class="projInfo">
-                <p class="projTitle serifFont">My Personal Portfolio Website</p>
-                <p class="projDetail sansFont">I have carefully designed this website to serve as my online portfolio.  I have demonstrated my raw HTML, CSS, and JS skills here.</p>
+                <p class="title">My Personal Portfolio Website</p>
+                <p class="detail">I have carefully designed this website to serve as my online portfolio. I have
+                    demonstrated my raw HTML, CSS, and JS skills here.</p>
             </div>
             <img class="projSS" src="./assets/project-image/personal-website.png" alt="personal-website-screen-shot">
         </div>
@@ -69,22 +73,62 @@
         <div class="projContainer">
             <img class="projSS" src="./assets/project-image/balanceTracker.png" alt="personal-website-screen-shot">
             <div class="projInfo">
-                <p class="projTitle serifFont">Balance Tracker</p>
-                <p class="projDetail sansFont">With a combination of modern design and tech stack Balance tracker provides eligant solutions for tracking income & expense. I have demonstrated my raw HTML, CSS, Bootstrap, JS, PHP, and MySql skills here.</p>
+                <p class="title">Balance Tracker</p>
+                <p class="detail">With a combination of modern design and tech stack Balance tracker provides eligant
+                    solutions for tracking income & expense. I have demonstrated my raw HTML, CSS, Bootstrap, JS, PHP,
+                    and MySql skills here.</p>
             </div>
         </div>
 
         <div class="projContainer">
             <div class="projInfo">
-                <p class="projTitle serifFont">Moto Hub - ecommerce site for vehicles</p>
-                <p class="projDetail sansFont">A ecommerce that has always been missing in the ever growing market of Bangladesh.  I have demonstrated my raw HTML, CSS, JS, PHP, and MySQL skills here.</p>
+                <p class="title">Moto Hub - ecommerce site for vehicles</p>
+                <p class="detail">A ecommerce that has always been missing in the ever growing market of Bangladesh. I
+                    have demonstrated my raw HTML, CSS, JS, PHP, and MySQL skills here.</p>
             </div>
             <img class="projSS" src="./assets/project-image/moto-hub.png" alt="personal-website-screen-shot">
         </div>
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <div id="aboutContainer">
+            <div id="mtselfInfo">
+                <p class="title">What I do!</p>
+                <p class="detail">I am an experienced iOS & Webapp developer with a track record of crafting seamless
+                    user experiences and innovative apps. With one year of experience,I'm driven to contribute
+                    effectively while continuously enhancing my skills to drive personal growth and elevate business
+                    success.
+
+                    I keep most of my projects on GitHub. You can check my projects from GitHub or AppStore if
+                    published. Please scroll to the Project section for the links.
+
+                    Currently I am open to Job opportunities, so that I may contribute and gain real life experience. If
+                    you find my skills be fitting any good opportunity that you may provide, I would be pleased if you
+                    Contact me.
+                </p>
+            </div>
+            <div id="skillContainer">
+                <p class="title">Skills</p>
+                <div id="skills">
+                    <div>Swift</div>
+                    <div>JavaScript</div>
+                    <div>OOP</div>
+                    <div>Nextjs</div>
+                    <div>Nestjs</div>
+                    <div>SwiftUI</div>
+                    <div>HTML</div>
+                    <div>CSS</div>
+                    <div>Tailwind</div>
+                    <div>Bootstrap</div>
+                    <div>Git</div>
+                    <div>GitHub</div>
+                    <div>MVC</div>
+                    <div>MVVM</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Contact -->
     <section id="contact"></section>
