--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Antic+Didone&family=Open+Sans:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" type="text/css">
 </head>
 
 <body>
@@ -131,7 +131,9 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+
+    </section>
 
     <!-- Footer -->
     <div id="footer"></div>
